Ajout de la méthode modifyGame non terminé
