# serveur/api/openapi.yaml
@@ -28,23 +28,6 @@ paths:
         "200":
           description: Successful operation
       x-swagger-router-controller: Platform
-    post:
-      tags:
-      - platform
-      summary: Create a new platform
-      operationId: platformsPOST
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/platforms_body'
-        required: true
-      responses:
-        "200":
-          description: A new platform has been created
-        "400":
-          description: The platform already exist
-      x-swagger-router-controller: Platform
   /platforms/{name}:
     get:
       tags:
@@ -65,6 +48,32 @@ paths:
           description: Successful operation
         "404":
           description: Platform not found
+      x-swagger-router-controller: Platform
+    post:
+      tags:
+      - platform
+      summary: Create a new platform
+      operationId: platformsNamePOST
+      parameters:
+      - name: name
+        in: path
+        description: name platform
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/platforms_name_body'
+        required: true
+      responses:
+        "200":
+          description: A new platform has been created
+        "400":
+          description: The platform already exist
       x-swagger-router-controller: Platform
     delete:
       tags:
@@ -106,14 +115,14 @@ paths:
         "400":
           description: Platform not found
       x-swagger-router-controller: Platform
-  /platforms/{name}/games/{game_name}:
+  /platforms/{id_platform}/games/{id_game}:
     put:
       tags:
       - platform
       summary: Modify a game by platform
-      operationId: platformsNameGamesGame_namePUT
+      operationId: platformsId_platformGamesId_gamePUT
       parameters:
-      - name: name
+      - name: id_platform
         in: path
         description: a platform if found
         required: true
@@ -121,7 +130,7 @@ paths:
         explode: false
         schema:
           type: string
-      - name: game_name
+      - name: id_game
         in: path
         description: a game if found
         required: true
@@ -129,6 +138,12 @@ paths:
         explode: false
         schema:
           type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/games_id_game_body'
+        required: true
       responses:
         "200":
           description: Successful operation
@@ -500,7 +515,12 @@ paths:
       x-swagger-router-controller: Game
 components:
   schemas:
-    platforms_body:
+    platforms_name_body:
+      type: object
+      properties:
+        name:
+          type: string
+    games_id_game_body:
       type: object
       properties:
         name:
